public/css/app.css
/* ... */
.pulse-button:hover 
{
	-webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
}
@-webkit-keyframes pulse {to {box-shadow: 0 0 0 25px rgba(232, 76, 61, 0);}}
@-moz-keyframes pulse {to {box-shadow: 0 0 0 25px rgba(232, 76, 61, 0);}}
@-ms-keyframes pulse {to {box-shadow: 0 0 0 25px rgba(232, 76, 61, 0);}}
@keyframes pulse {to {box-shadow: 0 0 0 25px rgba(232, 76, 61, 0);}}
/*Pulse-button End*/
.listing1{
	margin: 0 1%;
}
.listings2{
	padding: 0 5%;
}
.listings3{
	padding: 0 4%;
}
.listing-3-1{
	margin: 0 1%;
	padding: 0 5%;
}
@media (max-width: 1225px) and (min-width: 991px){
	/*.h3, h3{
		font-size: 17px !important;
	}*/
	#logo{
		margin-top: 0px !important;
	}
	.navbar {
		font-size: 16px;
		position: fixed;
		background-color: #2c254a;
		margin-bottom: 0px;
	}
	.nav>li>a{
			color: #fff;
			padding: 25px 10px !important;
			font-size: 13px !important;
			/*font-weight: 500 !important;*/
			letter-spacing: 1px;
		}
	h2{
		font-size: 2.1em !important;
	}
	h4{
		font-size: 20px !important;
	}
	.listing1{
		margin: 0%;
	}
	.listings3{
		padding: 0 4% !important;
	}
	.listing-3-1{
		margin: 0 4px;
		padding: 0 4%;
	}
	.listing-3-2{
		padding: 0 3%;
	}
}
@media (max-width: 990px) and (min-width: 768px){
	/*.container{
		max-width: 800px !important;
	}
	*/
	.h4, h4{
		font-size: 18px !important;
	}
	.navbar {
		font-size: 13px;
		position: static;
		background-color: #2c254a;
		margin-bottom: 0px;
	}
	.header .main-nav .nav .nav-item a{
		font-size: 10px;
		padding: 15px 1px;
		/*margin-right: 10px;*/
	}
	.header .nav .nav-item a{
		font-size: 13px !important;
		padding: 27px 3px !important;
		/*margin-right: 10px;*/
	}
	.listings3{
		padding: 0 3% !important;
	}
}
@media (max-width: 768px) {
	h2{
		font-size: 2.1em !important;
	}
	h4{
		font-size: 22px !important;
	}
	.navbar{
		position: fixed;
		background-color: #2c254a;
		margin-bottom: 0px;
	}
	.header .main-nav .nav .nav-item a{
		font-size: 10px;
		padding: 15px 1px;
	}
	#stats-container {
		padding-top: 0em;
	}
	li:hover{
		background-color: skyblue;
	}
	.navbar-toggle{
		margin-top: 15px !important;
	}
	.logo{
		padding: 0px !important;
	}
	.listing1{
		margin: 0 -2%;
		padding: 0 5% !important;
	}
	.listings3{
		padding: 0 3% !important;
	}
	.listing-3-1{
		margin: 0 4%;
		padding: 0 8%;
	}
	.listing-3-2{
		padding: 0 6%;
	}
	.listing-3-3{
		padding: 0 6%;
	}
}
@media (max-width: 320px) {
	h2{
		font-size: 1.3em !important;
		line-height: 1.3em;
		font-weight:200;
	}
	h4{
		font-size: 1.2em !important;
		/*line-height: 1.3em;*/
		/*font-weight:200;*/
	}
	.navbar{
		position: static;
	}
	.header .logo{
		font-size: 14px;
		padding-top:0px !important;
	}
	.navbar-toggle{
		margin-top: -50px !important;
	}
		/*.col-xs-4{
			padding-left: 0px;
			padding-right: 0px;
			}*/
		/*.navbar-toggle{
			background-color: #fff;
		}
		.navbar-container.fixed-theme{
			padding: 10px !important;
		}
		.navbar-container{
			padding: 0 20px !important;
			}*/
		}
		@media (max-width: 480px) {
			h2{
				font-size: 1.5em !important;
				/*line-height: 1.3em;*/
				/*font-weight:200;*/
			}
			h4{
				/*font-size: 1em !important;*/
				/*line-height: 1.3em;*/
				/*font-weight:200;*/
			}
			h3{
				font-size: 24px !important;
			}
			.navbar-toggle{
				margin-top: 13px;
			}
			.navbar{
				position: static;
			}
			.header .logo{
				font-size: 14px;
				padding-top:0px !important;
			}
			#promo .color-overlay{
				min-height: 25em;
			}
			.security-image{
				width: 80%;
			}
			.listing-3-1{
				margin: 0 1%;
				padding: 0 5%;
			}
			.listing-3-2{
				padding: 0 3%;
			}
			.listing-3-3{
				padding: 0 5%;
			}
		}

		.typed-cursor{
			opacity: 1;
			-webkit-animation: blink 0.7s infinite;
			-moz-animation: blink 0.7s infinite;
			animation: blink 0.7s infinite;
			color: white;
		}
		@keyframes blink{
			0% { opacity:1; }
			50% { opacity:0; }
			100% { opacity:1; }
		}
		@-webkit-keyframes blink{
			0% { opacity:1; }
			50% { opacity:0; }
			100% { opacity:1; }
		}
		@-moz-keyframes blink{
			0% { opacity:1; }
			50% { opacity:0; }
			100% { opacity:1; }
		}

		/*code snippet for navbar transition*/
		.navbar-brand {
			font-size: 24px;
		}

		.navbar-container {
			padding: 30px 32px;
		}

		.navbar.navbar-fixed-top.fixed-theme {
			background-color: #2c254a;
			/*border-color: #080808;*/
			box-shadow: 0 0 5px rgba(0,0,0,.8);
		}
		.nav>li>a{
			color: #fff;
			padding: 8px 10px;
			font-size: 13px !important;
			/*font-weight: 500 !important;*/
			letter-spacing: 1px;
		}
		.nav>li>a:focus,.nav>li>a:hover{
			background-color: transparent;
			/*color: #efe92f;*/
		}
		.navbar-brand.fixed-theme {
			font-size: 18px;
		}

		.navbar-container.fixed-theme {
			padding: 0 10px;
		}

		.navbar-brand.fixed-theme,
		.navbar-container.fixed-theme,
		.navbar.navbar-fixed-top.fixed-theme,
		.navbar-brand,
		.navbar-container{
			transition: 0.8s;
			-webkit-transition:  0.8s;
		}

.edit-button-style{
	width: 35px;
    height: 35px;
    background-color: rgb(226, 68, 68);
    position: absolute;
    text-align: center;
    border-radius: 50px;
    box-shadow: 0 1px 2px #fff, 0 -1px 1px #666,
    			inset 0 -1px 1px rgba(0,0,0,0.5),
    			inset 0 1px 1px rgba(255,255,255,0.8);
    cursor: pointer;

}
.edit-button-style a{
	vertical-align: -webkit-baseline-middle;
	font-size: 14px;
}

#preview_logo{
    width: 171px;
    height: 60px;
    overflow: hidden;
    text-align: right;
    padding: 0px !important;
    background: repeating-linear-gradient(
      45deg,
      rgba(0, 0, 0, 0.1),
      rgba(0, 0, 0, 0.1) 10px,
      rgba(0, 0, 0, 0.2) 10px,
      rgba(0, 0, 0, 0.2) 20px
      ) !important;
}

#preview_back_img1{
    width: 171px;
    height: 104px;
    overflow: hidden;
    text-align: right;
    padding: 0px !important;
    background: repeating-linear-gradient(
      45deg,
      rgba(0, 0, 0, 0.1),
      rgba(0, 0, 0, 0.1) 10px,
      rgba(0, 0, 0, 0.2) 10px,
      rgba(0, 0, 0, 0.2) 20px
      ) !important;
}
/* ... */

